# crabberbot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  PREMIUM_ARCHITECTURE.md  README.md  SECURITY.md  build.rs  docker-compose.override.yml  docker-compose.yml  grafana-alert-rules.json  grafana-dashboard.json
.github/workflows/: deploy.yml  latest-deps.yml
cloudflare-terraform/: .terraform.lock.hcl  cloudflare.tf  create_tfvars.sh  gcp.tf  outputs.tf  providers.tf  variables.tf
migrations/: 001_initial.sql  002_bigint_processing_time.sql  003_premium_tables.sql  004_user_id_rename.sql  005_audio_cache_path.sql  006_transcript_cache.sql  007_premium_usage_units.sql
src/: commands.rs  concurrency.rs  config.rs  downloader.rs  handler.rs  lib.rs  main.rs  retry.rs  storage.rs  subscription.rs  telegram_api.rs  terms.rs  test_utils.rs  validator.rs
src/premium/: audio_extractor.rs  mod.rs  summarizer.rs  transcriber.rs
