[package]
name = "crabberbot"
version = "2.0.0"
edition = "2024"
authors = ["enucatl <1423701+Enucatl@users.noreply.github.com>"]
homepage = "https://github.com/Enucatl/crabberbot"
repository = "https://github.com/Enucatl/crabberbot"

[dependencies]
async-trait = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
dashmap = "6.1.0"
dotenvy = "0.15"
google-cloud-auth = "1.9.0"
glob = "0.3"
http = "1.3.1"
indoc = "2"
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.17", default-features = false, features = ["macros", "webhooks", "webhooks-axum", "rustls", "ctrlc_handler"] }
thiserror = "2.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mockall = "0.14"
tempfile = "3"
